--- a/settings.ini
+++ b/settings.ini
@@ -1,17 +1,17 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = nbdev_template
+lib_name = myLibrary
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = fastai
-# description = A description of your project
-# keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+user = BrendaLPhys
+description = This is a test run
+keywords = test, nbdev
+author = Brenda Leyva A.
+author_email = brenda.leyva89@gmail.com
+copyright = Brenda Leyva A.
 branch = master
 version = 0.0.1
 min_python = 3.6
