--- a/settings.ini
+++ b/settings.ini
@@ -3,7 +3,7 @@
 # All sections below are required unless otherwise specified
 
 host = github
-lib_name = myLibrary
+lib_name = ProgrammingForDS
 
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
